--- a/style/style.css
+++ b/style/style.css
@@ -13,15 +13,16 @@ body{
 
 
 .mapa-box {
-    position: relative;
+    position: absolute;
     width: 100%;
-    height: calc(100vh - 60px); /* Subtrai a altura da barra de pesquisa */
+    height:100vh;
     top: 60px; /* Ajusta a posição do mapa para baixo */
     background-color: aliceblue;
+    z-index: 0;
 }
 .mapa-box iframe{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     border: 0;
 }
 
@@ -33,11 +34,12 @@ body{
 /* Estilização da barra de pesquisa */
 
 .pesquisa-local {
+    justify-content: center;
     display: flex;
-    width: 60%;
+    width: 100%;
     height: 40px;
     position: absolute;
-    top: 20px;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
@@ -47,8 +49,9 @@ body{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+
 .pesquisa-local input{
-    width: 95%;
+    width: 70%;
     border-radius: 5px;
 }
 
@@ -58,4 +61,116 @@ body{
 
 .pesquisa-local .localization{
     background-color: blue;
+}
+
+
+/* Estilo do footer */
+
+
+footer {
+    align-items: center;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    min-height: 50px;
+    background-color: #fff;
+    border-radius: 15px;
+    position: fixed;
+    bottom: 10px;
+    height: 70px;
+    width: 70%;
+}
+
+footer .butoes-footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+footer .butoes-footer button {
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-left: 200px; 
+    margin-right: 50px;
+    cursor: pointer;
+}
+
+footer .butoes-footer button:first-child {
+    margin-left: 0;
+}
+
+footer .butoes-footer button:last-child {
+    margin-right: 0;
+}
+
+
+
+
+
+
+/* media queries */
+
+
+@media screen and (max-width: 768px) {
+    footer{
+        width: 40%;
+    }
+
+    footer .butoes-footer button {
+        margin-left: 50px; 
+        margin-right: 50px;
+    }
+}
+
+
+
+
+
+@media screen and (max-width: 480px) {
+    footer{
+        width: 90%;
+    }
+
+    footer .butoes-footer button {
+        margin-left: 50px; 
+        margin-right: 50px;
+    }
+
+}
+
+
+
+
+
+
+@media screen and (max-width: 360px) {
+    
+    footer{
+        width: 90%;
+    }
+
+    footer .butoes-footer button {
+        margin-left: 50px; 
+        margin-right: 50px;
+    }
+}
+
+
+
+
+
+@media screen and (max-width: 300px) {
+
+    footer{
+        width: 90%;
+    }
+
+    footer .butoes-footer button {
+        margin-left: 50px; 
+        margin-right: 50px;
+    }
 }
