--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Rubik';
+}
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #262626;
-    border: 0;
+    overflow-x: hidden;
 }
-
 
 
 /* Estilização do mapa */
@@ -16,8 +21,6 @@ body{
     position: absolute;
     width: 100%;
     height:100vh;
-    top: 60px; /* Ajusta a posição do mapa para baixo */
-    background-color: aliceblue;
     z-index: 0;
 }
 .mapa-box iframe{
@@ -34,16 +37,16 @@ body{
 /* Estilização da barra de pesquisa */
 
 .pesquisa-local {
-    justify-content: center;
     display: flex;
+    justify-content: space-around;
     width: 100%;
-    height: 40px;
+    height: 60px;
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
-    background-color: white;
+    background-color: #ffffffaa;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -52,64 +55,65 @@ body{
 
 .pesquisa-local input{
     width: 70%;
-    border-radius: 5px;
+    border-radius: 20px;
+    border: transparent;
+    background-color: #f6f6f6;
+    padding-left: 20px;
 }
 
 .pesquisa-local button{
-    width: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    width: 10%;
+    height: 90%;
+    border-radius: 50px;
+    background-color: #f6f6f6;
 }
 
 .pesquisa-local .localization{
-    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    width: 10%;
+    height: 90%;
+    border-radius: 50px;
+    background-color: #f6f6f6;
 }
+
+.pesquisa-local .localization svg {
+    width: 18px;
+    height: 18px;
+}
+
 
 
 /* Estilo do footer */
 
-
 footer {
-    align-items: center;
-    z-index: 1;
     display: flex;
     justify-content: center;
+    align-items: center;
     min-height: 50px;
-    background-color: #fff;
-    border-radius: 15px;
+    background-color: #ffffffaa;
+    border-radius: 20px;
     position: fixed;
     bottom: 10px;
-    height: 70px;
-    width: 70%;
+    height: 60px;
+    max-width: 80%;
 }
 
-footer .butoes-footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-footer .butoes-footer button {
-    height: 40px;
-    width: 40px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    margin-left: 200px; 
-    margin-right: 50px;
+footer .butoes-footer a{
     cursor: pointer;
 }
 
-footer .butoes-footer button:first-child {
-    margin-left: 0;
+footer .butoes-footer {
+    display: flex;
+    flex-direction: row;
+    gap: 60px; 
 }
-
-footer .butoes-footer button:last-child {
-    margin-right: 0;
-}
-
-
-
-
 
 
 /* media queries */
@@ -127,9 +131,6 @@ footer .butoes-footer button:last-child {
 }
 
 
-
-
-
 @media screen and (max-width: 480px) {
     footer{
         width: 90%;
@@ -143,10 +144,6 @@ footer .butoes-footer button:last-child {
 }
 
 
-
-
-
-
 @media screen and (max-width: 360px) {
     
     footer{
@@ -158,9 +155,6 @@ footer .butoes-footer button:last-child {
         margin-right: 50px;
     }
 }
-
-
-
 
 
 @media screen and (max-width: 300px) {
