--- a/style/loginPage.css
+++ b/style/loginPage.css
@@ -7,25 +7,27 @@
 
 body {
     margin-top: 10%;
+    background-color: #EEEDEB;
 }
 
 .app-info-container {
     margin: 20px 0px 0px 10px;
     display: flex;
+    justify-content: center;
     flex-direction: row;
     align-items: center;
     gap: 20px;
 }
 
 .app-info-container img {
-    width: 60px;
-    height: 60px; 
-    border-radius: 50px;
-    border: 4px solid var(--theme-color);
+    width: 140px;
+    height: 120px; 
+    /* border-radius: 50px;
+    border: 2px solid var(--theme-color); */
 }
 
 .login-container {
-    margin-top: 30px; 
+    margin-top: 20%; 
 }
 
 .login-container h2 {
@@ -37,11 +39,10 @@ body {
     justify-content: center;
     align-items: center; 
     flex-direction: column;
-    margin-top: 30px;
 }
 
 .login-container form .forgot-password {
-    margin: 10px 30px 0px 0px; 
+    margin: 15px 30px 0px 0px; 
     align-self: flex-end; 
 }
 
@@ -53,10 +54,10 @@ body {
 .login-container form input {
     width: 90%;
     height: 50px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: none;
-    background-color: #F3FDF6;
-    padding: 10px;
+    background-color: #DEE3DD;
+    padding: 15px;
     margin-top: 14px;
     font-size: 16px;
 }
@@ -72,13 +73,13 @@ body {
 }
 
 .login-container .submit-button button {
-    width: 90%;
-    height: 50px;
+    width: 50%;
+    height: 60px;
     border: none;
     color: white;
     font-size: 18px;
     background-color: var(--theme-color);
-    border-radius: 5px;
+    border-radius: 10px;
     margin-bottom: 10px; 
     box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
 }
