--- a/style/registerPage.css
+++ b/style/registerPage.css
@@ -7,21 +7,23 @@
 
 body {
     margin-top: 10%;
+    background-color: #EEEDEB;
 }
 
 .app-info-container {
     margin: 20px 0px 0px 10px;
     display: flex;
+    justify-content: center;
     flex-direction: row;
     align-items: center;
     gap: 20px;
 }
 
 .app-info-container img {
-    width: 60px;
-    height: 60px; 
-    border-radius: 50px;
-    border: 4px solid var(--theme-color);
+    width: 120px;
+    height: 100px; 
+    /* border-radius: 50px;
+    border: 4px solid var(--theme-color); */
 }
 
 .register-container {
@@ -59,7 +61,7 @@ body {
     height: 50px;
     border-radius: 5px;
     border: none;
-    background-color: #F3FDF6;
+    background-color: #DEE3DD;
     padding: 10px;
     margin-top: 14px;
     font-size: 16px;
@@ -81,13 +83,13 @@ body {
 }
 
 .register-container .submit-button button {
-    width: 90%;
-    height: 50px;
+    width: 60%;
+    height: 60px;
     border: none;
     color: white;
     font-size: 18px;
     background-color: var(--theme-color);
-    border-radius: 5px;
+    border-radius: 10px;
     margin-bottom: 10px; 
     box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
 }
