--- a/style/index.css
+++ b/style/index.css
@@ -14,6 +14,45 @@ body{
 }
 
 
+/*Side Bar*/
+
+.sidebar {
+    height: 40%;
+    width: 0px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #EEEDEB;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    border-radius: 10px;
+}
+
+.sidebar a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: var(--main-font);
+    color: #466546;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+
 /* Estilização do mapa */
 
 
@@ -68,7 +107,7 @@ body{
     border: none;
     width: 10%;
     height: 90%;
-    border-radius: 50px;
+    border-radius: 100%;
     background-color: #f6f6f6;
 }
 
@@ -102,7 +141,7 @@ footer {
     position: fixed;
     bottom: 10px;
     height: 60px;
-    max-width: 80%;
+    max-width: 70%;
 }
 
 footer .butoes-footer a{
