--- a/style/cookingTipsPage.css
+++ b/style/cookingTipsPage.css
@@ -34,9 +34,10 @@ header .return-arrow svg {
 .card-container {
     display: flex;
     justify-content: center;
+    align-items: center; 
     flex-direction: column;
-
 }
+
 
 .card-container button {
     display: flex;
@@ -68,32 +69,30 @@ header .return-arrow svg {
 
 /* overlay */
 
-.overlay{
-    height: 900px;
-    width: 90%;
+.overlay {
+    height: 100vh; 
+    width: 100%;
     position: fixed;
     left: 0;
     top: 0;
-    bottom: 0;
-    right: 0;
-    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.1));
+    background: rgba(0,0,0,0.5); 
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.overlay-inner{
+.overlay-inner {
     background: #fff;
-    width: 1000px;
-    height: 600px;
+    max-width: 90%; 
+    max-height: 90%; 
     padding: 1.5rem;
     position: relative;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow: auto; 
     font-size: 1.3rem;
 }
 
-.overlay-inner .close{
+.overlay-inner .close {
     cursor: pointer;
     position: absolute;
     top: 1rem;
@@ -102,38 +101,35 @@ header .return-arrow svg {
     border: none;
     font-size: 17px;
     background-color: transparent;
+    z-index: 2; 
 }
 
-.close i img:hover{
-    transform: scale(0.9);
-}
-
-.overlay-inner .inner-box{
+.overlay-inner .inner-box {
     margin-top: 30px;
     display: flex;
     justify-content: center;
 }
 
-.overlay-inner .inner-box img{
+.overlay-inner .inner-box img {
     margin-right: 20px;
     width: 150px;
     height: 200px;
 }
 
-.overlay-inner .inner-box h3{
+.overlay-inner .inner-box h3 {
     margin-top: 10px;
     color: green;
 }
 
-.overlay-inner .inner-box h4{
+.overlay-inner .inner-box h4 {
     color: blue;
 }
 
-.overlay-inner .inner-box h4 span{
+.overlay-inner .inner-box h4 span {
     margin-left: 15px;
 }
 
-.overlay-inner .inner-box button{
+.overlay-inner .inner-box button {
     cursor: pointer;
     margin-left: 10px;
     margin-bottom: 20px;
@@ -147,16 +143,15 @@ header .return-arrow svg {
     padding: 0.3rem 0.5rem;
 }
 
-.overlay-inner .inner-box .favoritar-btn{
+.overlay-inner .inner-box .favoritar-btn {
     background-color: green;
 }
 
-.overlay-inner .inner-box .esquece-btn{
+.overlay-inner .inner-box .esquece-btn {
     background-color: red;
 }
 
-
-.overlay-inner .inner-box .descricao{
+.overlay-inner .inner-box .descricao {
     margin-top: 2rem;
     text-align: justify;
     font-size: 13px;
