--- a/style/registeredFoodPage.css
+++ b/style/registeredFoodPage.css
@@ -2,13 +2,15 @@ body {
     font-family: var(--main-font);
     margin: 0;
     padding: 0;
-    background-color: #EEEDEB;
+    background-color: #eeedeb;
     color: #333;
-}
-
-header {
+  }
+  
+  header {
+    position: fixed;
+    top: 0;
     width: 100%;
-    height: 40px;
+    height: 80px; 
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -16,55 +18,58 @@ header {
     background-color: var(--theme-color);
     color: #fff;
     padding: 20px;
-    text-align: center;
-    font-size: 12px;
-}
+    box-sizing: border-box; 
+    z-index: 1000;
+  }
 
-header .return-arrow a {
+  header h1 {
+    font-size: 25px;
+  }
+  
+  header .return-arrow a {
     text-decoration: none;
     color: white;
-}
-
-header .return-arrow svg {
+  }
+  
+  header .return-arrow svg {
     width: 25px;
     height: 25px;
-}
-
-
-.card-container {
+  }
+  
+  .card-container {
     display: flex;
     justify-content: center;
-}
-
-.card-container button {
+    margin-top: 80px; 
+  }
+  
+  .card-container button {
     text-decoration: none;
     color: var(--theme-color);
     display: contents;
-}
-
-.card-food {
+  }
+  
+  .card-food {
     margin-top: 30px;
     height: 150px;
     width: 90%;
-    background-color: #DEE3DD;
+    background-color: #dee3dd;
     box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
-    display: flex; 
-    align-items: center; 
+    display: flex;
+    align-items: center;
     gap: 20px;
-}
-
-.card-food img {
-    max-width: 40%; 
-    max-height: 80%; 
-    border-radius: 10px; 
+  }
+  
+  .card-food img {
+    max-width: 40%;
+    max-height: 80%;
+    border-radius: 10px;
     border: none;
     margin-left: 10px;
-}
-
-
-/* overlay */
-
-.overlay{
+  }
+  
+  /* overlay */
+  
+  .overlay {
     height: 900px;
     width: 90%;
     position: fixed;
@@ -72,13 +77,13 @@ header .return-arrow svg {
     top: 0;
     bottom: 0;
     right: 0;
-    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.1));
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1));
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.overlay-inner{
+  }
+  
+  .overlay-inner {
     background: #fff;
     width: 1000px;
     height: 600px;
@@ -87,9 +92,9 @@ header .return-arrow svg {
     box-sizing: border-box;
     overflow: hidden;
     font-size: 1.3rem;
-}
-
-.overlay-inner .close{
+  }
+  
+  .overlay-inner .close {
     cursor: pointer;
     position: absolute;
     top: 1rem;
@@ -98,38 +103,38 @@ header .return-arrow svg {
     border: none;
     font-size: 17px;
     background-color: transparent;
-}
-
-.close i img:hover{
+  }
+  
+  .close i img:hover {
     transform: scale(0.9);
-}
-
-.overlay-inner .inner-box{
+  }
+  
+  .overlay-inner .inner-box {
     margin-top: 30px;
     display: flex;
     justify-content: center;
-}
-
-.overlay-inner .inner-box img{
+  }
+  
+  .overlay-inner .inner-box img {
     margin-right: 20px;
     width: 150px;
     height: 200px;
-}
-
-.overlay-inner .inner-box h3{
+  }
+  
+  .overlay-inner .inner-box h3 {
     margin-top: 10px;
     color: green;
-}
-
-.overlay-inner .inner-box h4{
+  }
+  
+  .overlay-inner .inner-box h4 {
     color: blue;
-}
-
-.overlay-inner .inner-box h4 span{
+  }
+  
+  .overlay-inner .inner-box h4 span {
     margin-left: 15px;
-}
-
-.overlay-inner .inner-box button{
+  }
+  
+  .overlay-inner .inner-box button {
     cursor: pointer;
     margin-left: 10px;
     margin-bottom: 20px;
@@ -141,19 +146,19 @@ header .return-arrow svg {
     color: white;
     font-weight: bold;
     padding: 0.3rem 0.5rem;
-}
-
-.overlay-inner .inner-box .favoritar-btn{
+  }
+  
+  .overlay-inner .inner-box .favoritar-btn {
     background-color: green;
-}
-
-.overlay-inner .inner-box .esquece-btn{
+  }
+  
+  .overlay-inner .inner-box .esquece-btn {
     background-color: red;
-}
-
-
-.overlay-inner .inner-box .descricao{
+  }
+  
+  .overlay-inner .inner-box .descricao {
     margin-top: 2rem;
     text-align: justify;
     font-size: 13px;
-}
+  }
+  
