--- a/style/userProfile.css
+++ b/style/userProfile.css
@@ -1,117 +1,120 @@
 body {
-    font-family: var(--main-font);
-    margin: 0;
-    padding: 0;
-    background-color: #fff;
-    color: #333;
-  }
-  
-  header {
-    display: flex;
-    justify-content: flex-start;
-    width: 100%;
-    height: 35px;
-    align-items: center;
-    gap: 30px;
-    background-color: var(--theme-color);
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  header .return-arrow a {
-    text-decoration: none;
-    color: white;
-  }
-  
-  header .return-arrow svg {
-    width: 25px;
-    height: 25px;
-  }
-  
-  h1 {
-    font-size: 25px;
-    margin-left: 20px;
-  }
-  
-  form {
-    background-color: #eeedeb;
-    padding: 20px;
-    border-radius: 5px;
-    margin: 10px auto;
-    max-width: 500px;
-  }
-  
-  h3 {
-    font-size: 18px;
-    margin-top: 10px;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="password"],
-  input[type="date"],
-  textarea {
-    width: calc(100% - 30px);
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #dee3dd;
-    font-size: 15px;
-  }
-  
-  .show-password {
-    display: flex;
-    align-items: center;
-  }
-  
-  .show-password input[type="checkbox"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    margin-right: 10px;
-    cursor: pointer;
-    position: relative;
-  }
-  
-  .show-password input[type="checkbox"]:checked {
-    background-color: var(--theme-color);
-  }
-  
-  .show-password input[type="checkbox"]:checked::before {
-    content: "";
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    width: 16px;
-    height: 16px;
-    background-color: var(--theme-color);
-  }
-  
-  .show-password label {
-    font-size: 15px;
-  }
-  
-  .button-update {
-    text-align: center;
-    margin-top: 10px;
-  }
-  
-  .button-update button {
-    margin-top: 20px;
-    width: 45%;
-    height: 50px;
-    border: none;
-    color: white;
-    font-size: 16px;
-    background-color: var(--theme-color);
-    border-radius: 10px;
-    margin-bottom: 10px;
-    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
-  }
-  
+  font-family: var(--main-font);
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  color: #333;
+}
+
+header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 30px;
+  background-color: var(--theme-color);
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 40px;
+  z-index: 1000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+header .return-arrow a {
+  text-decoration: none;
+  color: white;
+}
+
+header .return-arrow svg {
+  width: 25px;
+  height: 25px;
+}
+
+h1 {
+  font-size: 25px;
+  margin-left: 20px;
+}
+
+form {
+  background-color: #eeedeb;
+  padding: 20px;
+  border-radius: 5px;
+  margin-top: 100px;
+  max-width: 500px;
+}
+
+h3 {
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="date"],
+textarea {
+  width: calc(100% - 30px);
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #dee3dd;
+  font-size: 15px;
+}
+
+.show-password {
+  display: flex;
+  align-items: center;
+}
+
+.show-password input[type="checkbox"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin-right: 10px;
+  cursor: pointer;
+  position: relative;
+}
+
+.show-password input[type="checkbox"]:checked {
+  background-color: var(--theme-color);
+}
+
+.show-password input[type="checkbox"]:checked::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background-color: var(--theme-color);
+}
+
+.show-password label {
+  font-size: 15px;
+}
+
+.button-update {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.button-update button {
+  margin-top: 20px;
+  width: 45%;
+  height: 50px;
+  border: none;
+  color: white;
+  font-size: 16px;
+  background-color: var(--theme-color);
+  border-radius: 10px;
+  margin-bottom: 10px;
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+}
