--- a/style/cookingTipsPage.css
+++ b/style/cookingTipsPage.css
@@ -54,15 +54,15 @@ header .return-arrow svg {
 }
 
 .card-food {
-    margin-top: 30px;
     height: 150px;
-    width: 90%;
+    width: 90vw;
     background-color: #DEE3DD;
     box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
     display: flex; 
     align-items: center; 
+    margin-top: 30px;
     gap: 20px;
-}
+  }
 
 .card-food img {
     max-width: 40%; 
