--- a/style/registerPage.css
+++ b/style/registerPage.css
@@ -1,232 +1,262 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: var(--main-font);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--main-font);
 }
 
 body {
-    margin-top: 10%;
-    background-color: #EEEDEB;
+  margin-top: 10%;
+  background-color: #eeedeb;
 }
 
 .app-info-container {
-    margin: 20px 0px 0px 10px;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-    gap: 20px;
+  margin: 20px 0px 0px 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
 }
 
 .app-info-container img {
-    width: 120px;
-    height: 100px; 
-    /* border-radius: 50px;
+  width: 120px;
+  height: 100px;
+  /* border-radius: 50px;
     border: 4px solid var(--theme-color); */
 }
 
 .register-container {
-    margin-top: 30px; 
+  margin-top: 30px;
 }
 
 .register-container h2 {
-    margin: 20px 0px 0px 10px;
+  margin: 20px 0px 0px 10px;
 }
 
 .register-container p {
-    margin: 20px 10px 0px 10px;
+  margin: 20px 10px 0px 10px;
 }
 
 .register-container form {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    flex-direction: column;
-    margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 30px;
 }
 
 .register-container form .login-link {
-    margin: 10px 30px 0px 0px; 
-    align-self: flex-end; 
+  margin: 10px 30px 0px 0px;
+  align-self: flex-end;
 }
 
 .register-container form p a {
-    text-decoration: none;
-    color: #466546;
+  text-decoration: none;
+  color: #466546;
 }
 
 .register-container form input {
-    width: 90%;
-    height: 50px;
-    border-radius: 5px;
-    border: none;
-    background-color: #DEE3DD;
-    padding: 10px;
-    margin-top: 14px;
-    font-size: 16px;
+  width: 90%;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: #dee3dd;
+  padding: 10px;
+  margin-top: 14px;
+  font-size: 16px;
 }
 
 .register-container form input::placeholder {
-    font-size: 16px; 
+  font-size: 16px;
 }
 
-.register-container .privacy-politic-text a{
-    text-decoration: none;
-    color: var(--theme-color);  
+.register-container .privacy-politic-text a {
+  text-decoration: none;
+  color: var(--theme-color);
 }
 
 .register-container .submit-button {
-    display: flex;
-    justify-content: center;
-    margin-top: 30%;
+  display: flex;
+  justify-content: center;
+  margin-top: 30%;
 }
 
 .register-container .submit-button button {
-    width: 60%;
-    height: 60px;
-    border: none;
-    color: white;
-    font-size: 18px;
-    background-color: var(--theme-color);
-    border-radius: 10px;
-    margin-bottom: 10px; 
-    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+  width: 60%;
+  height: 60px;
+  border: none;
+  color: white;
+  font-size: 18px;
+  background-color: var(--theme-color);
+  border-radius: 10px;
+  margin-bottom: 10px;
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
 }
 
 .register-container .login-link {
-    display: flex;
-    justify-content: center;
-    margin-top: 20%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
 }
 
-.register-container .login-link p{
-    font-size: 16px;
+.register-container .login-link p {
+  font-size: 16px;
 }
 
 .register-container .login-link a {
-    text-decoration: none;
-    color: var(--theme-color);   
+  text-decoration: none;
+  color: var(--theme-color);
 }
-
 
 /*estilo das preferencias*/
 
-
 .preferences-form {
-    position: absolute;
-    top: 50%;
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-  }
-
-
-.preferences-container {
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: var(--background-theme);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  display: none;
+  overflow-y: auto;
 }
 
+#preferences-container {
+  display: none;
+}
 
-.preferences-container .preferences-form {
-    margin-bottom: 10px;
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
+  overflow-y: auto;
+  max-height: 80%;
 }
 
 .input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    color: #333;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  color: #333;
 }
 
 .preferences label,
 .restrictions label {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 16px;
+  display: block;
+  margin-bottom: 10px;
+  font-size: 16px;
 }
 
 .preferences input[type="checkbox"],
 .restrictions input[type="checkbox"] {
-    transform: scale(1.0);
+  transform: scale(1);
 }
 
 .preferences input[type="checkbox"]:checked::before,
 .restrictions input[type="checkbox"]:checked::before {
-    content: '';
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--theme-color);
-    border: 2px solid var(--theme-color); 
-    border-radius: 3px;
+  content: "";
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--theme-color);
+  border: 2px solid var(--theme-color);
+  border-radius: 3px;
 }
 
 /*overlay*/
 
-
 .preferences-form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .preferences-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: var(--background-theme);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: var(--background-theme);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%; 
-    height: 100%; 
-    background-color: rgba(0, 0, 0, 0.5); 
-    z-index: 999; 
-    display: none; 
-    overflow-y: auto;
-    max-height: 80%; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
+  overflow-y: auto;
+  max-height: 80%;
 }
 
-.preferences{
-    display: inline-flex;
+.preferences {
+  display: inline-flex;
 }
 
 .preferences label,
 .restrictions label {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    margin-bottom: 10px; 
-    font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
+  font-size: 16px;
 }
 
 .preferences input[type="checkbox"],
 .restrictions input[type="checkbox"] {
-    margin-bottom: 5px; 
+  margin-bottom: 5px;
 }
 
-
-.restrictions{
-    display: flex;
+.restrictions {
+  display: flex;
 }
 
+.preferences-dropdown {
+  width: 100%;
+  margin-top: 14px;
+}
+
+.preferences-dropdown {
+  width: 90%;
+  margin-top: 14px;
+}
+
+.preferences-dropdown label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+
+.checkbox-container label {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.checkbox-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.checkbox-container input[type="checkbox"] {
+  transform: scale(0.5);
+}
