--- a/style/registerPage.css
+++ b/style/registerPage.css
@@ -110,131 +110,6 @@ body {
   color: var(--theme-color);
 }
 
-/*estilo das preferencias*/
-
-/* .preferences-form {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  display: none;
-  overflow-y: auto;
-}
-
-#preferences-container {
-  display: none;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  display: none;
-  overflow-y: auto;
-  max-height: 80%;
-}
-
-.input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  color: #333;
-}
-
-.preferences label,
-.restrictions label {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 16px;
-}
-
-.preferences input[type="checkbox"],
-.restrictions input[type="checkbox"] {
-  transform: scale(1);
-}
-
-.preferences input[type="checkbox"]:checked::before,
-.restrictions input[type="checkbox"]:checked::before {
-  content: "";
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: var(--theme-color);
-  border: 2px solid var(--theme-color);
-  border-radius: 3px;
-} */
-
-/*overlay*/
-
-.preferences-form {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-}
-
-.preferences-container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: var(--background-theme);
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  display: none;
-  overflow-y: auto;
-  max-height: 80%;
-}
-
-.preferences {
-  display: inline-flex;
-}
-
-.preferences label,
-.restrictions label {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 10px;
-  font-size: 16px;
-}
-
-.preferences input[type="checkbox"],
-.restrictions input[type="checkbox"] {
-  margin-bottom: 5px;
-}
-
-.restrictions {
-  display: flex;
-}
-
-
-
-
-
 
 .preferences-dropdown {
   width: 100%;
@@ -265,4 +140,32 @@ body {
 
 .checkbox-container input[type="checkbox"] {
   transform: scale(0.5);
+}
+
+
+
+/* overlay */
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; 
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; 
+}
+
+
+#message-box {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+#message-text {
+  font-size: 18px;
 }
