--- a/style/userProfile.css
+++ b/style/userProfile.css
@@ -39,6 +39,7 @@ h1 {
 }
 
 form {
+  text-align: center;
   background-color: #eeedeb;
   padding: 20px;
   border-radius: 5px;
@@ -54,7 +55,6 @@ h3 {
 input[type="text"],
 input[type="email"],
 input[type="password"],
-input[type="date"],
 textarea {
   width: calc(100% - 30px);
   padding: 10px;
@@ -100,6 +100,7 @@ textarea {
 .show-password label {
   font-size: 15px;
 }
+
 
 .button-update {
   text-align: center;
