🖌️Registered Food overlay upgrated🖌️

--- a/style/registeredFoodPage.css
+++ b/style/registeredFoodPage.css
@@ -1,142 +1,152 @@
 body {
-    font-family: var(--main-font);
-    margin: 0;
-    padding: 0;
-    background-color: #EEEDEB;
-    color: #333;
+  font-family: var(--main-font);
+  margin: 0;
+  padding: 0;
+  background-color: #eeedeb;
+  color: #333;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 80px; 
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 30px;
-    background-color: var(--theme-color);
-    color: #fff;
-    padding: 20px;
-    box-sizing: border-box; 
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 30px;
+  background-color: var(--theme-color);
+  color: #fff;
+  padding: 20px;
+  box-sizing: border-box;
+  z-index: 1000;
 }
 
 header h1 {
-    font-size: 25px;
-    margin-left: 30px;
+  font-size: 25px;
+  margin-left: 30px;
 }
 
 header .return-arrow a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 header .return-arrow svg {
-    width: 25px;
-    height: 25px;
+  width: 25px;
+  height: 25px;
 }
 
 .card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    flex-direction: column;
-    margin-top: 80px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 80px;
 }
 
 .card-container button {
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    color: var(--theme-color);
-    display: contents;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--theme-color);
+  display: contents;
 }
 
 .card-food {
   height: 150px;
   width: 90vw;
-  background-color: #DEE3DD;
+  background-color: #dee3dd;
   box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
-  display: flex; 
-  align-items: center; 
+  display: flex;
+  align-items: center;
   margin-top: 30px;
   gap: 20px;
 }
 
-
 .card-food img {
-    max-width: 40%; 
-    max-height: 80%; 
-    border-radius: 10px; 
-    border: none;
-    margin-left: 10px;
+  max-width: 40%;
+  max-height: 80%;
+  border-radius: 10px;
+  border: none;
+  margin-left: 10px;
 }
 
 /* overlay */
 
 .overlay {
-    height: 100vh; 
-    width: 100%;
-    position: fixed;
-    left: 0;
-    top: 0;
-    background: rgba(0,0,0,0.5); 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 2000;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
 }
 
 .overlay-inner {
-    background: #fff;
-    max-width: 90%; 
-    max-height: 90%; 
-    padding: 1.5rem;
-    position: relative;
-    box-sizing: border-box;
-    overflow: auto; 
-    font-size: 1.3rem;
+  background: #fff;
+  max-width: 90%;
+  max-height: 90%;
+  padding: 1.5rem;
+  position: relative;
+  box-sizing: border-box;
+  overflow: auto;
+  font-size: 1.3rem;
 }
 
 .overlay-inner .close {
-    cursor: pointer;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    outline: none;
-    border: none;
-    font-size: 17px;
-    background-color: transparent;
-    z-index: 2; 
+  cursor: pointer;
+  position: absolute;
+  left: 20rem;
+  top: 0.2rem;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  width: 40px;
+  background-color: transparent;
+  z-index: 2;
 }
 
 .overlay-inner .inner-box {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.overlay-inner .imagem {
-    margin-right: 20px;
-    width: 300px;
-    height: 300px;
+.overlay-inner img {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 90%;
+  height: 90%;
 }
 
-.overlay-inner .inner-box h3 {
+.overlay-inner p {
+    word-wrap: break-word; 
+    overflow-wrap: break-word; 
+    white-space: normal;
+}
+
+
+/* .overlay-inner .inner-box h3 {
     margin-top: 10px;
     color: green;
-}
+} */
 
-.overlay-inner .inner-box h4 {
+/* .overlay-inner .inner-box h4 {
     color: blue;
-}
+} */
 
-.overlay-inner .inner-box h4 span {
+/* .overlay-inner .inner-box h4 span {
     margin-left: 15px;
-}
+} */
 
-.overlay-inner .inner-box button {
+/* .overlay-inner .inner-box button {
     cursor: pointer;
     margin-left: 10px;
     margin-bottom: 20px;
@@ -144,22 +154,14 @@ header .return-arrow svg {
     border: none;
     width: 100px;
     border-radius: 5px;
-    background-color: #24a0ed;
+    background-color: #144e71;
     color: white;
     font-weight: bold;
     padding: 0.3rem 0.5rem;
-}
-
-.overlay-inner .inner-box .favoritar-btn {
-    background-color: green;
-}
-
-.overlay-inner .inner-box .esquece-btn {
-    background-color: red;
-}
+} */
 
 .overlay-inner .inner-box .descricao {
-    margin-top: 2rem;
-    text-align: justify;
-    font-size: 13px;
+  margin-top: 2rem;
+  text-align: justify;
+  font-size: 13px;
 }
