--- a/style/registeredFoodPage.css
+++ b/style/registeredFoodPage.css
@@ -158,9 +158,9 @@ header .return-arrow svg {
     font-weight: bold;
     padding: 0.3rem 0.5rem;
 } */
-
+/* 
 .overlay-inner .inner-box .descricao {
   margin-top: 2rem;
   text-align: justify;
   font-size: 13px;
-}
+} */
